--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "category": "",
     "category_en": "",
     "multiple": false,
-    "scripts": ["*"]
+    "scripts": ["*", "php", "asp", "aspx", "jsp", "custom", "php4"]
   }
   
