支持 JSPJS 类型Shell生成

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "name_en": "GenShell",
     "main": "index.js",
     "icon": "random",
-    "version": "0.4",
+    "version": "0.5",
     "description": "生成 Shell",
     "description_en": "generate antsword shell",
     "author": {
@@ -13,6 +13,6 @@
     "category": "",
     "category_en": "",
     "multiple": false,
-    "scripts": ["*", "php", "asp", "aspx", "jsp", "custom", "php4"]
+    "scripts": ["*", "php", "asp", "aspx", "jsp", "custom", "php4", "jspjs"]
   }
   
